@@ -1,3 +1,8 @@
+2017-10-10         M. Douglas McIlroy    <doug@cs.dartmouth.edu>
+
+	* re0.c, re1.c, re2.c, testre.c: Changes after running
+	through a current C++ compiler.
+
 2003-01-26         M. Douglas McIlroy    <doug@cs.dartmouth.edu>
 
 	Additional files while attempting to modernize the library,
